name:                  amazon-elasticbeanstalk
version:               20101201.0.1.0
synopsis:              AWS Elastic Beanstalk
homepage:              http://github.com/brendanhay/amazon
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
copyright:             Copyright (c) 2013-2014 Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazon.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen
    ghc-options:       -Wall

    exposed-modules:
        Network.AWS.ElasticBeanstalk

    other-modules:
        Network.AWS.ElasticBeanstalk.Service
      , Network.AWS.ElasticBeanstalk.Types

      , Network.AWS.ElasticBeanstalk.DescribeApplications
      , Network.AWS.ElasticBeanstalk.UpdateEnvironment
      , Network.AWS.ElasticBeanstalk.TerminateEnvironment
      , Network.AWS.ElasticBeanstalk.CreateApplicationVersion
      , Network.AWS.ElasticBeanstalk.DescribeEvents
      , Network.AWS.ElasticBeanstalk.RequestEnvironmentInfo
      , Network.AWS.ElasticBeanstalk.RetrieveEnvironmentInfo
      , Network.AWS.ElasticBeanstalk.DeleteApplication
      , Network.AWS.ElasticBeanstalk.UpdateApplication
      , Network.AWS.ElasticBeanstalk.CreateApplication
      , Network.AWS.ElasticBeanstalk.DeleteConfigurationTemplate
      , Network.AWS.ElasticBeanstalk.UpdateConfigurationTemplate
      , Network.AWS.ElasticBeanstalk.DescribeEnvironmentResources
      , Network.AWS.ElasticBeanstalk.DeleteApplicationVersion
      , Network.AWS.ElasticBeanstalk.UpdateApplicationVersion
      , Network.AWS.ElasticBeanstalk.CreateConfigurationTemplate
      , Network.AWS.ElasticBeanstalk.RebuildEnvironment
      , Network.AWS.ElasticBeanstalk.DeleteEnvironmentConfiguration
      , Network.AWS.ElasticBeanstalk.SwapEnvironmentCNAMEs
      , Network.AWS.ElasticBeanstalk.ListAvailableSolutionStacks
      , Network.AWS.ElasticBeanstalk.DescribeConfigurationOptions
      , Network.AWS.ElasticBeanstalk.CreateStorageLocation
      , Network.AWS.ElasticBeanstalk.DescribeConfigurationSettings
      , Network.AWS.ElasticBeanstalk.ValidateConfigurationSettings
      , Network.AWS.ElasticBeanstalk.RestartAppServer
      , Network.AWS.ElasticBeanstalk.DescribeEnvironments
      , Network.AWS.ElasticBeanstalk.CheckDNSAvailability
      , Network.AWS.ElasticBeanstalk.DescribeApplicationVersions
      , Network.AWS.ElasticBeanstalk.CreateEnvironment

    build-depends:
        amazon-core
      , base        >= 4.6 && < 5
