name:                  amazon-elb
version:               20120601.0.1.0
synopsis:              Elastic Load Balancing
homepage:              http://github.com/brendanhay/amazon
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
copyright:             Copyright (c) 2013-2014 Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazon.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen
    ghc-options:       -Wall

    exposed-modules:
        Network.AWS.ElasticLoadBalancing

    other-modules:
        Network.AWS.ElasticLoadBalancing.Service
      , Network.AWS.ElasticLoadBalancing.Types

      , Network.AWS.ElasticLoadBalancing.DescribeLoadBalancers
      , Network.AWS.ElasticLoadBalancing.DescribeLoadBalancerPolicyTypes
      , Network.AWS.ElasticLoadBalancing.ApplySecurityGroupsToLoadBalancer
      , Network.AWS.ElasticLoadBalancing.CreateLBCookieStickinessPolicy
      , Network.AWS.ElasticLoadBalancing.DeleteLoadBalancer
      , Network.AWS.ElasticLoadBalancing.DeregisterInstancesFromLoadBalancer
      , Network.AWS.ElasticLoadBalancing.CreateLoadBalancerPolicy
      , Network.AWS.ElasticLoadBalancing.DescribeLoadBalancerPolicies
      , Network.AWS.ElasticLoadBalancing.DisableAvailabilityZonesForLoadBalancer
      , Network.AWS.ElasticLoadBalancing.EnableAvailabilityZonesForLoadBalancer
      , Network.AWS.ElasticLoadBalancing.SetLoadBalancerPoliciesForBackendServer
      , Network.AWS.ElasticLoadBalancing.SetLoadBalancerListenerSSLCertificate
      , Network.AWS.ElasticLoadBalancing.AttachLoadBalancerToSubnets
      , Network.AWS.ElasticLoadBalancing.ConfigureHealthCheck
      , Network.AWS.ElasticLoadBalancing.ModifyLoadBalancerAttributes
      , Network.AWS.ElasticLoadBalancing.CreateAppCookieStickinessPolicy
      , Network.AWS.ElasticLoadBalancing.DescribeInstanceHealth
      , Network.AWS.ElasticLoadBalancing.DescribeLoadBalancerAttributes
      , Network.AWS.ElasticLoadBalancing.CreateLoadBalancerListeners
      , Network.AWS.ElasticLoadBalancing.DeleteLoadBalancerPolicy
      , Network.AWS.ElasticLoadBalancing.DetachLoadBalancerFromSubnets
      , Network.AWS.ElasticLoadBalancing.RegisterInstancesWithLoadBalancer
      , Network.AWS.ElasticLoadBalancing.CreateLoadBalancer
      , Network.AWS.ElasticLoadBalancing.DeleteLoadBalancerListeners
      , Network.AWS.ElasticLoadBalancing.SetLoadBalancerPoliciesOfListener

    build-depends:
        base >= 4.6 && < 5
