name:                  amazon-emr
version:               20090331.0.1.0
synopsis:              Amazon Elastic MapReduce
homepage:              http://github.com/brendanhay/amazon
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
copyright:             Copyright (c) 2013-2014 Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazon.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen
    ghc-options:       -Wall

    exposed-modules:
        Network.AWS.EMR

    other-modules:
        Network.AWS.EMR.Service
      , Network.AWS.EMR.Types

      , Network.AWS.EMR.RunJobFlow
      , Network.AWS.EMR.SetVisibleToAllUsers
      , Network.AWS.EMR.TerminateJobFlows
      , Network.AWS.EMR.DescribeStep
      , Network.AWS.EMR.RemoveTags
      , Network.AWS.EMR.DescribeCluster
      , Network.AWS.EMR.SetTerminationProtection
      , Network.AWS.EMR.AddJobFlowSteps
      , Network.AWS.EMR.ModifyInstanceGroups
      , Network.AWS.EMR.ListSteps
      , Network.AWS.EMR.DescribeJobFlows
      , Network.AWS.EMR.AddInstanceGroups
      , Network.AWS.EMR.ListInstanceGroups
      , Network.AWS.EMR.ListBootstrapActions
      , Network.AWS.EMR.AddTags
      , Network.AWS.EMR.ListInstances
      , Network.AWS.EMR.ListClusters

    build-depends:
        amazon-core
      , base        >= 4.6 && < 5
