name:                  amazon-iam
version:               20100508.0.1.0
synopsis:              AWS Identity and Access Management
homepage:              http://github.com/brendanhay/amazon
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
copyright:             Copyright (c) 2013-2014 Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazon.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen
    ghc-options:       -Wall

    exposed-modules:
        Network.AWS.IAM

    other-modules:
        Network.AWS.IAM.Service
      , Network.AWS.IAM.Types

      , Network.AWS.IAM.ListInstanceProfilesForRole
      , Network.AWS.IAM.CreateAccessKey
      , Network.AWS.IAM.CreateVirtualMFADevice
      , Network.AWS.IAM.DeleteAccountPasswordPolicy
      , Network.AWS.IAM.UpdateAccountPasswordPolicy
      , Network.AWS.IAM.GetUserPolicy
      , Network.AWS.IAM.GetRole
      , Network.AWS.IAM.DeactivateMFADevice
      , Network.AWS.IAM.DeleteVirtualMFADevice
      , Network.AWS.IAM.ListRoles
      , Network.AWS.IAM.ListUserPolicies
      , Network.AWS.IAM.DeleteRole
      , Network.AWS.IAM.ListUsers
      , Network.AWS.IAM.PutUserPolicy
      , Network.AWS.IAM.DeleteUserPolicy
      , Network.AWS.IAM.CreateRole
      , Network.AWS.IAM.GetAccountSummary
      , Network.AWS.IAM.ListGroupPolicies
      , Network.AWS.IAM.DeleteInstanceProfile
      , Network.AWS.IAM.RemoveRoleFromInstanceProfile
      , Network.AWS.IAM.CreateInstanceProfile
      , Network.AWS.IAM.CreateSAMLProvider
      , Network.AWS.IAM.DeleteAccountAlias
      , Network.AWS.IAM.RemoveUserFromGroup
      , Network.AWS.IAM.DeleteGroupPolicy
      , Network.AWS.IAM.PutGroupPolicy
      , Network.AWS.IAM.GetLoginProfile
      , Network.AWS.IAM.GetGroupPolicy
      , Network.AWS.IAM.ChangePassword
      , Network.AWS.IAM.ListServerCertificates
      , Network.AWS.IAM.UpdateAssumeRolePolicy
      , Network.AWS.IAM.GetInstanceProfile
      , Network.AWS.IAM.CreateLoginProfile
      , Network.AWS.IAM.GetSAMLProvider
      , Network.AWS.IAM.AddRoleToInstanceProfile
      , Network.AWS.IAM.ListGroupsForUser
      , Network.AWS.IAM.AddUserToGroup
      , Network.AWS.IAM.GetUser
      , Network.AWS.IAM.ListSigningCertificates
      , Network.AWS.IAM.DeleteSigningCertificate
      , Network.AWS.IAM.UpdateSigningCertificate
      , Network.AWS.IAM.ListVirtualMFADevices
      , Network.AWS.IAM.ResyncMFADevice
      , Network.AWS.IAM.DeleteAccessKey
      , Network.AWS.IAM.UpdateAccessKey
      , Network.AWS.IAM.ListAccessKeys
      , Network.AWS.IAM.GetRolePolicy
      , Network.AWS.IAM.CreateUser
      , Network.AWS.IAM.PutRolePolicy
      , Network.AWS.IAM.UploadSigningCertificate
      , Network.AWS.IAM.DeleteRolePolicy
      , Network.AWS.IAM.GetAccountPasswordPolicy
      , Network.AWS.IAM.UpdateUser
      , Network.AWS.IAM.DeleteUser
      , Network.AWS.IAM.ListRolePolicies
      , Network.AWS.IAM.CreateAccountAlias
      , Network.AWS.IAM.ListInstanceProfiles
      , Network.AWS.IAM.EnableMFADevice
      , Network.AWS.IAM.ListAccountAliases
      , Network.AWS.IAM.DeleteSAMLProvider
      , Network.AWS.IAM.UpdateSAMLProvider
      , Network.AWS.IAM.CreateGroup
      , Network.AWS.IAM.ListMFADevices
      , Network.AWS.IAM.UploadServerCertificate
      , Network.AWS.IAM.ListSAMLProviders
      , Network.AWS.IAM.GetServerCertificate
      , Network.AWS.IAM.DeleteGroup
      , Network.AWS.IAM.UpdateGroup
      , Network.AWS.IAM.ListGroups
      , Network.AWS.IAM.UpdateLoginProfile
      , Network.AWS.IAM.DeleteLoginProfile
      , Network.AWS.IAM.GetGroup
      , Network.AWS.IAM.DeleteServerCertificate
      , Network.AWS.IAM.UpdateServerCertificate

    build-depends:
        base >= 4.6 && < 5
