name:                  amazon-kinesis
version:               20131202.0.1.0
synopsis:              Amazon Kinesis
homepage:              http://github.com/brendanhay/amazon
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
copyright:             Copyright (c) 2013-2014 Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazon.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen
    ghc-options:       -Wall

    exposed-modules:
        Network.AWS.Kinesis

    other-modules:
        Network.AWS.Kinesis.Service
      , Network.AWS.Kinesis.Types

      , Network.AWS.Kinesis.PutRecord
      , Network.AWS.Kinesis.MergeShards
      , Network.AWS.Kinesis.GetShardIterator
      , Network.AWS.Kinesis.GetRecords
      , Network.AWS.Kinesis.DeleteStream
      , Network.AWS.Kinesis.ListStreams
      , Network.AWS.Kinesis.CreateStream
      , Network.AWS.Kinesis.SplitShard
      , Network.AWS.Kinesis.DescribeStream

    build-depends:
        base >= 4.6 && < 5
