name:                  amazon-rds
version:               20130909.0.1.0
synopsis:              Amazon Relational Database Service
homepage:              http://github.com/brendanhay/amazon
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
copyright:             Copyright (c) 2013-2014 Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazon.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen
    ghc-options:       -Wall

    exposed-modules:
        Network.AWS.RDS

    other-modules:
        Network.AWS.RDS.Service
      , Network.AWS.RDS.Types

      , Network.AWS.RDS.PromoteReadReplica
      , Network.AWS.RDS.DescribeDBEngineVersions
      , Network.AWS.RDS.CopyDBSnapshot
      , Network.AWS.RDS.AddSourceIdentifierToSubscription
      , Network.AWS.RDS.ModifyDBInstance
      , Network.AWS.RDS.ModifyEventSubscription
      , Network.AWS.RDS.DescribeEvents
      , Network.AWS.RDS.DescribeEngineDefaultParameters
      , Network.AWS.RDS.DescribeOptionGroups
      , Network.AWS.RDS.DescribeDBLogFiles
      , Network.AWS.RDS.ModifyDBSubnetGroup
      , Network.AWS.RDS.ListTagsForResource
      , Network.AWS.RDS.DeleteOptionGroup
      , Network.AWS.RDS.DescribeReservedDBInstances
      , Network.AWS.RDS.RemoveSourceIdentifierFromSubscription
      , Network.AWS.RDS.RemoveTagsFromResource
      , Network.AWS.RDS.RestoreDBInstanceFromDBSnapshot
      , Network.AWS.RDS.CreateEventSubscription
      , Network.AWS.RDS.PurchaseReservedDBInstancesOffering
      , Network.AWS.RDS.CreateDBInstance
      , Network.AWS.RDS.AuthorizeDBSecurityGroupIngress
      , Network.AWS.RDS.DescribeOrderableDBInstanceOptions
      , Network.AWS.RDS.CreateDBSnapshot
      , Network.AWS.RDS.DeleteEventSubscription
      , Network.AWS.RDS.DescribeDBParameterGroups
      , Network.AWS.RDS.DescribeOptionGroupOptions
      , Network.AWS.RDS.DescribeEventSubscriptions
      , Network.AWS.RDS.AddTagsToResource
      , Network.AWS.RDS.DescribeDBParameters
      , Network.AWS.RDS.DescribeDBSnapshots
      , Network.AWS.RDS.DescribeDBSubnetGroups
      , Network.AWS.RDS.ModifyOptionGroup
      , Network.AWS.RDS.CreateDBParameterGroup
      , Network.AWS.RDS.DescribeEventCategories
      , Network.AWS.RDS.RestoreDBInstanceToPointInTime
      , Network.AWS.RDS.ResetDBParameterGroup
      , Network.AWS.RDS.RevokeDBSecurityGroupIngress
      , Network.AWS.RDS.ModifyDBParameterGroup
      , Network.AWS.RDS.CreateOptionGroup
      , Network.AWS.RDS.DeleteDBSnapshot
      , Network.AWS.RDS.DeleteDBSubnetGroup
      , Network.AWS.RDS.CreateDBSecurityGroup
      , Network.AWS.RDS.RebootDBInstance
      , Network.AWS.RDS.CreateDBSubnetGroup
      , Network.AWS.RDS.DescribeReservedDBInstancesOfferings
      , Network.AWS.RDS.DeleteDBSecurityGroup
      , Network.AWS.RDS.DeleteDBInstance
      , Network.AWS.RDS.CreateDBInstanceReadReplica
      , Network.AWS.RDS.DeleteDBParameterGroup
      , Network.AWS.RDS.DescribeDBSecurityGroups
      , Network.AWS.RDS.DescribeDBInstances
      , Network.AWS.RDS.DownloadDBLogFilePortion

    build-depends:
        base >= 4.6 && < 5
