name:                  amazon-amazon-redshift
version:               20121201.0.1.0
synopsis:              Amazon Redshift
homepage:              http://github.com/brendanhay/amazon
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
copyright:             Copyright (c) 2013-2014 Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazon.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen
    ghc-options:       -Wall

    exposed-modules:
        Network.AWS.Redshift

    other-modules:
        Network.AWS.Redshift.Service
      , Network.AWS.Redshift.Types

      , Network.AWS.Redshift.DescribeClusters
      , Network.AWS.Redshift.DeleteClusterSubnetGroup
      , Network.AWS.Redshift.DisableLogging
      , Network.AWS.Redshift.ModifyEventSubscription
      , Network.AWS.Redshift.DeleteClusterSnapshot
      , Network.AWS.Redshift.PurchaseReservedNodeOffering
      , Network.AWS.Redshift.DescribeReservedNodeOfferings
      , Network.AWS.Redshift.DescribeEvents
      , Network.AWS.Redshift.DescribeReservedNodes
      , Network.AWS.Redshift.DescribeClusterParameterGroups
      , Network.AWS.Redshift.EnableLogging
      , Network.AWS.Redshift.CreateClusterSubnetGroup
      , Network.AWS.Redshift.DeleteClusterParameterGroup
      , Network.AWS.Redshift.DescribeClusterSecurityGroups
      , Network.AWS.Redshift.EnableSnapshotCopy
      , Network.AWS.Redshift.DescribeClusterSnapshots
      , Network.AWS.Redshift.DescribeClusterSubnetGroups
      , Network.AWS.Redshift.ModifySnapshotCopyRetentionPeriod
      , Network.AWS.Redshift.AuthorizeSnapshotAccess
      , Network.AWS.Redshift.RebootCluster
      , Network.AWS.Redshift.DeleteCluster
      , Network.AWS.Redshift.CreateEventSubscription
      , Network.AWS.Redshift.DescribeOrderableClusterOptions
      , Network.AWS.Redshift.CreateCluster
      , Network.AWS.Redshift.CreateHsmClientCertificate
      , Network.AWS.Redshift.DescribeDefaultClusterParameters
      , Network.AWS.Redshift.DeleteEventSubscription
      , Network.AWS.Redshift.ResetClusterParameterGroup
      , Network.AWS.Redshift.DescribeEventSubscriptions
      , Network.AWS.Redshift.RevokeClusterSecurityGroupIngress
      , Network.AWS.Redshift.DescribeHsmClientCertificates
      , Network.AWS.Redshift.ModifyClusterParameterGroup
      , Network.AWS.Redshift.CreateClusterSecurityGroup
      , Network.AWS.Redshift.DescribeEventCategories
      , Network.AWS.Redshift.DescribeResize
      , Network.AWS.Redshift.DeleteHsmConfiguration
      , Network.AWS.Redshift.AuthorizeClusterSecurityGroupIngress
      , Network.AWS.Redshift.CreateClusterSnapshot
      , Network.AWS.Redshift.CreateHsmConfiguration
      , Network.AWS.Redshift.DescribeLoggingStatus
      , Network.AWS.Redshift.ModifyCluster
      , Network.AWS.Redshift.DeleteClusterSecurityGroup
      , Network.AWS.Redshift.DisableSnapshotCopy
      , Network.AWS.Redshift.DescribeClusterParameters
      , Network.AWS.Redshift.RestoreFromClusterSnapshot
      , Network.AWS.Redshift.CreateClusterParameterGroup
      , Network.AWS.Redshift.RevokeSnapshotAccess
      , Network.AWS.Redshift.DescribeHsmConfigurations
      , Network.AWS.Redshift.CopyClusterSnapshot
      , Network.AWS.Redshift.DeleteHsmClientCertificate
      , Network.AWS.Redshift.DescribeClusterVersions
      , Network.AWS.Redshift.ModifyClusterSubnetGroup
      , Network.AWS.Redshift.RotateEncryptionKey

    build-depends:
        base >= 4.6 && < 5
