name:                  amazon-route53
version:               20121212.0.1.0
synopsis:              Amazon Route 53
homepage:              http://github.com/brendanhay/amazon
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
copyright:             Copyright (c) 2013-2014 Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazon.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen
    ghc-options:       -Wall

    exposed-modules:
        Network.AWS.Route53

    other-modules:
        Network.AWS.Route53.Service
      , Network.AWS.Route53.Types

      , Network.AWS.Route53.GetChange
      , Network.AWS.Route53.ChangeResourceRecordSets
      , Network.AWS.Route53.DeleteHealthCheck
      , Network.AWS.Route53.CreateHostedZone
      , Network.AWS.Route53.CreateHealthCheck
      , Network.AWS.Route53.ListHostedZones
      , Network.AWS.Route53.GetHostedZone
      , Network.AWS.Route53.GetHealthCheck
      , Network.AWS.Route53.ListResourceRecordSets
      , Network.AWS.Route53.ListHealthChecks
      , Network.AWS.Route53.DeleteHostedZone

    build-depends:
        base >= 4.6 && < 5
