name:                  amazon-sns
version:               20100331.0.1.0
synopsis:              Amazon Simple Notification Service
homepage:              http://github.com/brendanhay/amazon
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
copyright:             Copyright (c) 2013-2014 Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazon.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen
    ghc-options:       -Wall

    exposed-modules:
        Network.AWS.SNS

    other-modules:
        Network.AWS.SNS.Service
      , Network.AWS.SNS.Types

      , Network.AWS.SNS.DeleteEndpoint
      , Network.AWS.SNS.RemovePermission
      , Network.AWS.SNS.DeleteTopic
      , Network.AWS.SNS.ListTopics
      , Network.AWS.SNS.CreatePlatformEndpoint
      , Network.AWS.SNS.SetPlatformApplicationAttributes
      , Network.AWS.SNS.ListSubscriptionsByTopic
      , Network.AWS.SNS.GetTopicAttributes
      , Network.AWS.SNS.CreatePlatformApplication
      , Network.AWS.SNS.GetPlatformApplicationAttributes
      , Network.AWS.SNS.ListEndpointsByPlatformApplication
      , Network.AWS.SNS.SetTopicAttributes
      , Network.AWS.SNS.DeletePlatformApplication
      , Network.AWS.SNS.ListPlatformApplications
      , Network.AWS.SNS.AddPermission
      , Network.AWS.SNS.GetEndpointAttributes
      , Network.AWS.SNS.ListSubscriptions
      , Network.AWS.SNS.GetSubscriptionAttributes
      , Network.AWS.SNS.CreateTopic
      , Network.AWS.SNS.Subscribe
      , Network.AWS.SNS.Unsubscribe
      , Network.AWS.SNS.SetEndpointAttributes
      , Network.AWS.SNS.SetSubscriptionAttributes
      , Network.AWS.SNS.ConfirmSubscription
      , Network.AWS.SNS.Publish

    build-depends:
        base >= 4.6 && < 5
