name:                  amazon-sts
version:               20110615.0.1.0
synopsis:              AWS Security Token Service
homepage:              http://github.com/brendanhay/amazon
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
copyright:             Copyright (c) 2013-2014 Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazon.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen
    ghc-options:       -Wall

    exposed-modules:
        Network.AWS.STS

    other-modules:
        Network.AWS.STS.Service
      , Network.AWS.STS.Types

      , Network.AWS.STS.AssumeRole
      , Network.AWS.STS.DecodeAuthorizationMessage
      , Network.AWS.STS.AssumeRoleWithWebIdentity
      , Network.AWS.STS.GetFederationToken
      , Network.AWS.STS.GetSessionToken
      , Network.AWS.STS.AssumeRoleWithSAML

    build-depends:
        amazon-core
      , base        >= 4.6 && < 5
