name:                  amazon-support
version:               20130415.0.1.0
synopsis:              AWS Support
homepage:              http://github.com/brendanhay/amazon
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
copyright:             Copyright (c) 2013-2014 Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazon.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen
    ghc-options:       -Wall

    exposed-modules:
        Network.AWS.Support

    other-modules:
        Network.AWS.Support.Service
      , Network.AWS.Support.Types

      , Network.AWS.Support.RefreshTrustedAdvisorCheck
      , Network.AWS.Support.DescribeCases
      , Network.AWS.Support.DescribeTrustedAdvisorCheckRefreshStatuses
      , Network.AWS.Support.DescribeTrustedAdvisorCheckSummaries
      , Network.AWS.Support.CreateCase
      , Network.AWS.Support.ResolveCase
      , Network.AWS.Support.DescribeSeverityLevels
      , Network.AWS.Support.DescribeTrustedAdvisorChecks
      , Network.AWS.Support.DescribeTrustedAdvisorCheckResult
      , Network.AWS.Support.DescribeServices
      , Network.AWS.Support.DescribeCommunications
      , Network.AWS.Support.AddCommunicationToCase

    build-depends:
        amazon-core
      , base        >= 4.6 && < 5
