name:                  amazon-amazon-swf
version:               20120125.0.1.0
synopsis:              Amazon Simple Workflow Service
homepage:              http://github.com/brendanhay/amazon
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
copyright:             Copyright (c) 2013-2014 Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazon.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen
    ghc-options:       -Wall

    exposed-modules:
        Network.AWS.SWF

    other-modules:
        Network.AWS.SWF.Service
      , Network.AWS.SWF.Types

      , Network.AWS.SWF.ListOpenWorkflowExecutions
      , Network.AWS.SWF.RegisterActivityType
      , Network.AWS.SWF.ListActivityTypes
      , Network.AWS.SWF.CountPendingActivityTasks
      , Network.AWS.SWF.RegisterWorkflowType
      , Network.AWS.SWF.ListWorkflowTypes
      , Network.AWS.SWF.RespondActivityTaskFailed
      , Network.AWS.SWF.CountOpenWorkflowExecutions
      , Network.AWS.SWF.DescribeWorkflowType
      , Network.AWS.SWF.DeprecateWorkflowType
      , Network.AWS.SWF.RequestCancelWorkflowExecution
      , Network.AWS.SWF.RegisterDomain
      , Network.AWS.SWF.RespondDecisionTaskCompleted
      , Network.AWS.SWF.PollForActivityTask
      , Network.AWS.SWF.RespondActivityTaskCompleted
      , Network.AWS.SWF.DescribeWorkflowExecution
      , Network.AWS.SWF.SignalWorkflowExecution
      , Network.AWS.SWF.CountPendingDecisionTasks
      , Network.AWS.SWF.ListClosedWorkflowExecutions
      , Network.AWS.SWF.RecordActivityTaskHeartbeat
      , Network.AWS.SWF.DescribeDomain
      , Network.AWS.SWF.GetWorkflowExecutionHistory
      , Network.AWS.SWF.DeprecateDomain
      , Network.AWS.SWF.TerminateWorkflowExecution
      , Network.AWS.SWF.DescribeActivityType
      , Network.AWS.SWF.DeprecateActivityType
      , Network.AWS.SWF.CountClosedWorkflowExecutions
      , Network.AWS.SWF.RespondActivityTaskCanceled
      , Network.AWS.SWF.StartWorkflowExecution
      , Network.AWS.SWF.PollForDecisionTask
      , Network.AWS.SWF.ListDomains

    build-depends:
        base >= 4.6 && < 5
