name:                  amazon
version:               0.1.0
synopsis:              Interfaces to Amazon Web Service APIs
homepage:              http://github.com/brendanhay/amazon
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
copyright:             Copyright (c) 2013-2014 Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazon.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src
    ghc-options:       -Wall

    build-depends:

    exposed-modules:
        amazon-route53

      , amazon-cloudfront

      , amazon-s3

      , amazon-dynamodb

      , amazon-kinesis

      , amazon-cloudtrail

      , amazon-datapipeline

      , amazon-directconnect

      , amazon-elasticmapreduce

      , amazon-opsworks

      , amazon-storagegateway

      , amazon-support

      , amazon-swf

      , amazon-email

      , amazon-elasticache

      , amazon-autoscaling

      , amazon-cloudformation

      , amazon-cloudsearch

      , amazon-monitoring

      , amazon-elasticbeanstalk

      , amazon-elasticloadbalancing

      , amazon-rds

      , amazon-redshift

      , amazon-sns

      , amazon-sqs

      , amazon-sts

      , amazon-ec2

      , amazon-iam
      , amazon-core
      , base >= 4.6 && < 5
