name:                  amazon
version:               0.1.0
synopsis:              Interfaces to Amazon Web Service APIs
homepage:              http://github.com/brendanhay/amazon
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
copyright:             Copyright (c) 2013-2014 Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
stability:             Experimental
category:              AWS, Cloud, Network
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/amazon.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src
    ghc-options:       -Wall

    build-depends:

    exposed-modules:
        amazon-amazon-route53

      , amazon-amazon-cloudfront

      , amazon-amazon-s3

      , amazon-amazon-dynamodb

      , amazon-amazon-kinesis

      , amazon-amazon-cloudtrail

      , amazon-amazon-datapipeline

      , amazon-amazon-directconnect

      , amazon-amazon-emr

      , amazon-amazon-opsworks

      , amazon-amazon-storagegateway

      , amazon-amazon-support

      , amazon-amazon-swf

      , amazon-amazon-ses

      , amazon-amazon-elasticache

      , amazon-amazon-autoscaling

      , amazon-amazon-cloudformation

      , amazon-amazon-cloudsearch

      , amazon-amazon-cloudwatch

      , amazon-amazon-elasticbeanstalk

      , amazon-amazon-elb

      , amazon-amazon-rds

      , amazon-amazon-redshift

      , amazon-amazon-sns

      , amazon-amazon-sqs

      , amazon-amazon-sts

      , amazon-amazon-ec2

      , amazon-amazon-iam
      , amazon-core
      , base >= 4.6 && < 5
